Used a lighter gray for coding blocks

--- a/RustOwnership/RustOwnership.css
+++ b/RustOwnership/RustOwnership.css
@@ -19,7 +19,7 @@ h2 {
 pre,
 code {
   font-family: "Share Tech Mono", monospace;
-  background-color: lightgray;
+  background-color: rgba(240, 240, 240, 0.9);
   font-size: 20rem;
 }
 
