--- a/RustOwnership/RustOwnership.css
+++ b/RustOwnership/RustOwnership.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  font-family: Lato, Arial, Helvetica, sans-serif;
+  font-family: "Oxygen", "Lato", sans-serif;
   font-size: 20rem;
   margin-top: 32rem;
   margin-bottom: 32rem;
