--- a/RustOwnership/RustOwnership.css
+++ b/RustOwnership/RustOwnership.css
@@ -6,10 +6,19 @@ html {
 }
 
 body {
-  font-family: "Oxygen", "Lato", sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 20rem;
   margin-top: 32rem;
   margin-bottom: 32rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Oxygen", sans-serif;
 }
 
 h2 {
